# anki-greg-styles

./: .envrc  .gitignore  Justfile  Pipfile  README.md  lefthook.yml  package-lock.json  pyproject.toml
.lefthook/pre-commit/: check-asset-version.py
assets/: _greg-styles-main.css  greg-styles-main.css
gregstyles/: __init__.py  assets.py  main.py  manifest.json
gregstyles/assets/: __init__.py  guard.py  internal.py  model.py
test/: test_assets.py  test_main.py
test/assets/: model.py  test_guard.py
