[project]
name = "anki-greg-styles"
version = "0.1.0"
description = "An Anki plugin that manages my card styles."
readme = "README.md"
requires-python = "==3.9.21"

# All dependencies are dev dependencies. We don’t build a wheel.
[dependency-groups]
dev = [
  "anki==25.02",
  "aqt==25.02",
  # Use the same version of PyQt6 as Anki:
  # https://github.com/ankitects/anki/blob/9b5da546be49f37c8d6c286e09c86074b2f0c278/python/requirements.qt6_6.in#L1
  "pyqt6==6.6.1",
  "pyqt6-qt6==6.6.2",
  "PyQt6-WebEngine==6.6.0",
  "PyQt6-WebEngine-qt6==6.6.2",
]

[project.urls]
"Homepage" = "https://github.com/gregorias/anki-greg-styles"

[tool.mypy]
python_executable = "./.venv/bin/python3"
