[project]
name = "anki-greg-styles"
version = "0.1.0"
authors = ["Grzegorz Milka <grzegorzmilka@gmail.com>"]
description = "Anki add-on with my card styles"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
]
license = "AGPLv3"
readme = "README.md"
requires-python = "==3.9.21"

[project.urls]
"Homepage" = "https://github.com/gregorias/anki-greg-styles"

# All dependencies are dev dependencies. We don’t build a wheel.
[dependency-groups]
dev = [
  "anki==25.02",
  "aqt==25.02",
  # Use the same version of PyQt6 as Anki:
  # https://github.com/ankitects/anki/blob/9b5da546be49f37c8d6c286e09c86074b2f0c278/python/requirements.qt6_6.in#L1
  "pyqt6==6.6.1",
  "pyqt6-qt6==6.6.2",
  "PyQt6-WebEngine==6.6.0",
  "PyQt6-WebEngine-qt6==6.6.2",
  "coverage>=7.8.0",
]

[tool.mypy]
python_executable = "./.venv/bin/python3"
